# speed_meter_project

./: CMakeLists.txt  README.md
client/desktop/: main.cpp
client/desktop/include/: canvas.h  comservice.h  tcpclient.h  uartservice.h  windows.h
client/desktop/src/: canvas.cpp  comservice.cpp  tcpclient.cpp  uartservice.cpp  windows.cpp
client/esp32/src/: main.cpp
server/desktop/: main.cpp
server/desktop/include/: comservices.h  tcpserver.h  uartservices.h  window.h
server/desktop/src/: comservices.cpp  tcpserver.cpp  uartservices.cpp  window.cpp
server/esp32/src/: main.cpp
shared/: setting.h
